# shopify-image-audit

./: .gitignore  QA_CHECKLIST.md  README.md  pyproject.toml  run_demo.ps1
archive/sprint1-analysis/: CLAUDE_DOMAIN_REPORT.md  all_files_report.txt  domain_analysis_report.txt
artifacts/: audit_result.json
docs/: SPRINT_1_COMPLETE.md  SPRINT_2_PLAN.md  governance.md
docs/runbook/: measurement_protocol.md
docs/spec/: cli_v0_1.md
fixtures/: bad_hero_lcp.json  optimized_shopify.json
schemas/: audit_result.schema.json
src/audit/: models.py  parser.py  ranker_heuristic.py  report.py
src/core/: __init__.py  image_extractor.py  performance_scorer.py
src/engine/: audit_orchestrator.py  cli.py
src/shopify_image_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_extract_vitals.py  test_models.py  test_pipeline.py  test_ranker_heuristic.py
tests/fixtures/: expected_images.json  expected_scores.json  extract_input.json
tools/: analyze_domains.py  list_all_files.py
