[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-image-audit"
version = "0.1.0"
description = "Shopify store image audit – Lighthouse-based analysis with heuristic and ML scoring"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "xopsio"},
]
dependencies = [
    "jsonschema>=4.20",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
audit = "engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
